kubernetes/kustomize/base/goeth-ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: eth1
spec:
  entryPoints:
    - eth1rpc
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: eth1
      port: 8545
